--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                                         <td><a href="JS-assignment/form.html">Link</a></td>   
                                         <td>Technologies used HTML, JavaScript</td>
                                         </tr> 
+                                        <tr>
+                                            <td>7</td>  
+                                            <td>Carousel Using JS</td> 
+                                            <td><a href="JS-assignment/slider.html">Link</a></td>   
+                                            <td>Technologies used HTML, JavaScript</td>
+                                            </tr> 
             </tbody>
                
             </table> 
