file and code added

--- a/JS-assignment/card.html
+++ b/JS-assignment/card.html
@@ -9,6 +9,7 @@
         body{
             background: #f9f9f9;
             padding: 30px 30px;
+            font-family: 'Montserrat';
         }
         #cardbox{
     display: grid;
@@ -21,6 +22,21 @@
     padding: 10px 20px;
     border-radius: 10px;
     box-shadow: 0px 3px 13px 0px rgb(14 14 14 / 15%);
+}
+.card p {
+    font-size: 20px;
+    font-weight: 600;
+    background: #dfdfdf;
+    width: fit-content;
+    padding: 6px 12px;
+    border-radius: 18px;
+
+}
+.card a{
+    color: #fd5d00;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-weight: 700;
 }
     </style>
 </head>
