--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
                                             <td><a href="JS-assignment/slider.html">Link</a></td>   
                                             <td>Technologies used HTML, JavaScript</td>
                                             </tr> 
+                                            <tr>
+                                                <td>8</td>  
+                                                <td>Calculator</td> 
+                                                <td><a href="JS-assignment/calculator.html">Link</a></td>   
+                                                <td>Technologies used HTML, JavaScript</td>
+                                                </tr> 
+                                                <tr>
+                                                    <td>9</td>  
+                                                    <td>Filter Data using dropdown</td> 
+                                                    <td><a href="JS-assignment/users.html">Link</a></td>   
+                                                    <td>Technologies used HTML, JavaScript</td>
+                                                    </tr> 
+                                                    <tr>
+                                                        <td>10</td>  
+                                                        <td>Image Slider Using Counter</td> 
+                                                        <td><a href="JS-assignment/slider.html">Link</a></td>   
+                                                        <td>Technologies used HTML, JavaScript</td>
+                                                        </tr> 
             </tbody>
                
             </table> 
