--- a/JS-assignment/index.html
+++ b/JS-assignment/index.html
@@ -6,13 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        h1{
+            text-align: center;
+            font-weight: 800;
+            font-family: 'Montserrat';
+            padding-top: 30px;
+            color: #9452E4;
+        }
 .apitable tr td{
     border: 1px solid #dfdfdf;
     padding: 10px;
 }
 .apitable {
     border-collapse: collapse;
-    width: 90%;
+    width: 70%;
+    margin: 0 15%;
+}
+.apitable tr th{
+    padding: 10px;
+    background: #dfdfdf;
+}
+#btn{
+    padding: 10px 20px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    border-radius: 30px;
+    background-color: #564FF2;
+    border: 0;
+    color: #fff;
+    margin-bottom: 30px;
+}
+div{
+    text-align: center;
+}
+.main{
+    max-height: 350px;
+    overflow-y: auto;
+
+}
+.main::-webkit-scrollbar{
+    display: none;
 }
     </style>
 </head>
