main file changed

--- a/index.html
+++ b/index.html
@@ -115,6 +115,24 @@
                                                         <td><a href="JS-assignment/slider.html">Link</a></td>   
                                                         <td>Technologies used HTML, JavaScript</td>
                                                         </tr> 
+                                                        <tr>
+                                                            <td>11</td>  
+                                                            <td>Accordion</td> 
+                                                            <td><a href="JS-assignment/accordion.html">Link</a></td>   
+                                                            <td>Technologies used HTML, JavaScript</td>
+                                                            </tr> 
+                                                            <tr>
+                                                                <td>12</td>  
+                                                                <td></td> 
+                                                                <td><a href="JS-assignment/length.html">Input Text length</a></td>   
+                                                                <td>Technologies used HTML, JavaScript</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>13</td>  
+                                                                    <td></td> 
+                                                                    <td><a href="JS-assignment/array-cards.html">Array Cards</a></td>   
+                                                                    <td>Technologies used HTML, JavaScript</td>
+                                                                    </tr>
             </tbody>
                
             </table> 
