main file changed

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                                                             </tr> 
                                                             <tr>
                                                                 <td>12</td>  
-                                                                <td></td> 
-                                                                <td><a href="JS-assignment/length.html">Input Text length</a></td>   
+                                                                <td>Input Text length</td> 
+                                                                <td><a href="JS-assignment/length.html">Link</a></td>   
                                                                 <td>Technologies used HTML, JavaScript</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td>13</td>  
-                                                                    <td></td> 
-                                                                    <td><a href="JS-assignment/array-cards.html">Array Cards</a></td>   
+                                                                    <td>Array Cards</td> 
+                                                                    <td><a href="JS-assignment/array-cards.html">Link</a></td>   
                                                                     <td>Technologies used HTML, JavaScript</td>
                                                                     </tr>
             </tbody>
